[DD-40357] handle the match defendant scenario to send NCES notification on application received with cloned offences from multiple cases of the defendant